--- a/vault.html
+++ b/vault.html
@@ -258,6 +258,9 @@
     <div class="wallet-hud">
       <span id="wallet">0x348c...0450</span>
       <span id="balance">8,732,109 Y2K</span>
+      <span id="wallet">0x...</span>
+      <span id="balance">0 Y2K</span>
+      <input id="nicknameInput" type="text" placeholder="Enter 𝕏 or nickname" style="margin-left:10px; background:#111; border:1px solid #00ffe140; color:#00ffe1; padding:4px 8px; border-radius:8px; font-size:12px;" />
     </div>
 
     <div class="glass-panel">
