--- a/vault.html
+++ b/vault.html
@@ -339,6 +339,7 @@
     });
 
     window.addEventListener("DOMContentLoaded", async () => {
+      [connected] = await window.ethereum.request({ method: 'eth_requestAccounts' });
       const [connected] = await window.ethereum.request({ method: 'eth_requestAccounts' });
       if (connected.toLowerCase() === ADMIN_WALLET) {
         selector.style.display = "block";
