--- a/vault.html
+++ b/vault.html
@@ -259,6 +259,7 @@
       <span id="wallet">0x...</span>
       <span id="balance">0 Y2K</span>
       <input id="nicknameInput" type="text" placeholder="Enter 𝕏 or nickname" style="margin-left:10px; background:#111; border:1px solid #00ffe140; color:#00ffe1; padding:4px 8px; border-radius:8px; font-size:12px;" />
+      <button id="connectWalletBtn" class="nav-btn" style="margin-top:12px;">Connect Wallet</button>
     </div>
 
     <div class="glass-panel">
