--- a/vault.html
+++ b/vault.html
@@ -6,32 +6,53 @@
   <title>Y2K Quantum Vault - Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Space Grotesk', sans-serif; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Space Grotesk', sans-serif;
+    }
     body {
-      background-color: #000; color: #fff; overflow-x: hidden;
-      padding: env(safe-area-inset); scroll-behavior: smooth;
+      background-color: #000;
+      color: #fff;
+      overflow-x: hidden;
+      padding: env(safe-area-inset);
+      scroll-behavior: smooth;
     }
 
     .cyber-grid {
-      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background-image: linear-gradient(rgba(99,102,241,0.1) 1px, transparent 1px),
-                        linear-gradient(90deg, rgba(99,102,241,0.1) 1px, transparent 1px);
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-image:
+        linear-gradient(rgba(99,102,241,0.1) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(99,102,241,0.1) 1px, transparent 1px);
       background-size: 20px 20px;
       transform: perspective(500px) rotateX(60deg);
       animation: gridMove 20s linear infinite;
-      z-index: 0; opacity: 0.2;
+      z-index: 0;
+      opacity: 0.2;
     }
 
-    @keyframes gridMove { from { background-position: 0 0; } to { background-position: 0 20px; } }
+    @keyframes gridMove {
+      from { background-position: 0 0; }
+      to { background-position: 0 20px; }
+    }
 
     .container {
-      position: relative; z-index: 1;
-      max-width: 430px; margin: auto; padding: 16px; padding-bottom: 80px;
+      position: relative;
+      z-index: 1;
+      max-width: 440px;
+      margin: auto;
+      padding: 16px;
+      padding-bottom: 100px;
     }
 
     .header-bar {
-      display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;
-      position: relative;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
     }
 
     .nav-btn {
@@ -54,7 +75,6 @@
 
     .dropdown {
       position: relative;
-      display: inline-block;
     }
 
     .dropdown-content {
@@ -66,9 +86,8 @@
       border: 1px solid rgba(255,255,255,0.08);
       border-radius: 10px;
       min-width: 160px;
-      z-index: 99;
       backdrop-filter: blur(10px);
-      text-align: left;
+      z-index: 99;
     }
 
     .dropdown-content a {
@@ -88,159 +107,42 @@
     }
 
     .wallet-hud {
-      display: flex; justify-content: space-between; align-items: center;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      align-items: center;
       background: rgba(255,255,255,0.05);
       border: 1px solid rgba(255,255,255,0.08);
       border-radius: 12px;
       padding: 12px 16px;
-      margin-bottom: 16px;
+      margin-bottom: 20px;
       backdrop-filter: blur(10px);
     }
 
-    .wallet-hud span { color: #00ffe1; font-size: 14px; }
-
-    .glass-panel {
-      background: rgba(255,255,255,0.03);
-      border-radius: 20px;
-      border: 1px solid rgba(255,255,255,0.08);
-      backdrop-filter: blur(18px);
-      padding: 24px;
-      margin-top: 16px;
-    }
-
-    .game-title { font-size: 20px; color: #fff; margin-bottom: 8px; text-align: center; }
-    .game-details { font-size: 14px; color: #aaa; margin-bottom: 16px; text-align: center; }
-
-    .buy-btn {
-      display: block; width: 100%;
-      padding: 14px;
-      background: linear-gradient(135deg, #6366f1, #8b5cf6);
-      color: white;
-      border: none;
-      border-radius: 10px;
-      font-weight: bold;
-      font-size: 15px;
-      cursor: pointer;
-      box-shadow: 0 0 10px rgba(99,102,241,0.3);
-      transition: 0.2s ease;
-    }
-
-    .buy-btn:hover { transform: scale(1.03); }
-
-    .placeholder-grid {
-      margin-top: 24px;
-      height: 180px;
-      border-radius: 12px;
-      background: repeating-linear-gradient(
-        45deg, rgba(255,255,255,0.03), rgba(255,255,255,0.03) 10px,
-        rgba(255,255,255,0.05) 10px, rgba(255,255,255,0.05) 20px
-      );
-      border: 1px dashed rgba(255,255,255,0.1);
-      display: flex; align-items: center; justify-content: center;
-      color: rgba(255,255,255,0.3); font-size: 14px;
-    }
-
-    .info-panel {
-      font-size: 13px;
-      color: #ccc;
-      text-align: center;
-      margin-top: 24px;
-      padding: 16px;
-      background: rgba(255,255,255,0.02);
-      border: 1px solid rgba(255,255,255,0.06);
-      border-radius: 12px;
-    }
-
-    .footer-nav {
-      position: fixed;
-      bottom: 0; left: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.6);
-      border-top: 1px solid rgba(255,255,255,0.08);
-      backdrop-filter: blur(16px);
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 10px 0;
-      z-index: 10;
-    }
-
-    .footer-nav button {
-      background: none;
-      border: none;
+    .wallet-hud span {
       color: #00ffe1;
-      font-size: 13px;
-      font-weight: bold;
-      text-align: center;
-      cursor: pointer;
+      font-size: 14px;
+      flex: 1;
     }
 
-    .footer-nav button:hover {
-      color: #22d3ee;
-    }
-
-    .top-button {
-      position: fixed;
-      right: 1rem;
-      bottom: 5rem;
-      background: #00ffe1;
-      color: #000;
-      border: none;
-      padding: 10px 14px;
-      border-radius: 30px;
-      font-size: 12px;
-      font-weight: bold;
-      box-shadow: 0 0 10px rgba(0,255,225,0.4);
-      cursor: pointer;
-      display: none;
-      z-index: 10;
-    }
-
-    .status-badge {
-      display: inline-block;
-      font-size: 12px;
-      padding: 4px 10px;
-      border-radius: 6px;
-      font-weight: bold;
-      margin-top: 8px;
-      background: #22d3ee20;
-      color: #22d3ee;
-      border: 1px solid #22d3ee40;
-      text-align: center;
-    }
-
-    .status-live  { background: #34d39920; color: #34d399; border-color: #34d39960; }
-    .status-final { background: #ef444420; color: #ef4444; border-color: #ef444460; }
-    .status-paid  { background: #a855f720; color: #a855f7; border-color: #a855f760; }
-
-    select#statusSelector {
-      margin-top: 12px;
-      width: 100%;
-      padding: 8px;
-      border-radius: 8px;
+    .wallet-hud input {
       background: #111;
-      color: #00ffe1;
       border: 1px solid #00ffe140;
-      display: none;
-      font-size: 13px;
+      color: #00ffe1;
+      padding: 4px 8px;
+      border-radius: 8px;
+      font-size: 12px;
+      flex: 1;
+      min-width: 120px;
     }
 
-    .pot-animated { animation: potPulse 1s ease-in-out; }
-    @keyframes potPulse {
-      0% { transform: scale(1); color: #fff; }
-      50% { transform: scale(1.1); color: #00ffe1; }
-      100% { transform: scale(1); color: #fff; }
-    }
-
-    .glitch-flicker { animation: flicker 0.2s linear 1; }
-    @keyframes flicker {
-      0%, 100% { opacity: 1; transform: scale(1); }
-      50% { opacity: 0.5; transform: scale(1.02); }
+    .wallet-hud button {
+      margin-left: auto;
+      margin-top: 6px;
     }
   </style>
 </head>
-
-  <body>
+<body>
   <div class="cyber-grid"></div>
   <div class="container">
     <div class="header-bar">
@@ -258,11 +160,11 @@
     <div class="wallet-hud">
       <span id="wallet">0x...</span>
       <span id="balance">0 Y2K</span>
-      <input id="nicknameInput" type="text" placeholder="Enter 𝕏 or nickname" style="margin-left:10px; background:#111; border:1px solid #00ffe140; color:#00ffe1; padding:4px 8px; border-radius:8px; font-size:12px;" />
-      <button id="connectWalletBtn" class="nav-btn" style="margin-top:12px;">Connect Wallet</button>
+      <input id="nicknameInput" type="text" placeholder="Enter 𝕏 or nickname" />
+      <button id="connectWalletBtn" class="nav-btn">Connect Wallet</button>
     </div>
 
-    <div class="glass-panel">
+        <div class="glass-panel">
       <div class="game-title">Stanley Cup Finals – Game 1</div>
       <div class="game-details">Buy-in: 100 Y2K<br>Pot Total: 4,200 Y2K</div>
       <div id="statusBadge" class="status-badge status-live">LIVE</div>
@@ -310,21 +212,10 @@
     const badge = document.getElementById("statusBadge");
     const selector = document.getElementById("statusSelector");
 
-    async function updateBadge(status) {
+    function updateBadge(status) {
       badge.textContent = status.toUpperCase();
       badge.className = "status-badge status-" + status;
     }
-
-    async function fetchY2KBalance(wallet) {
-  try {
-    // TEMP: Replace this with your actual Cronos RPC or backend endpoint for balance fetch
-    const response = await fetch(`https://y2k-api.example.com/balance/${wallet}`);
-    const data = await response.json();
-    document.getElementById("balance").textContent = `${data.balanceFormatted} Y2K`;
-  } catch (err) {
-    console.warn("Failed to fetch Y2K balance", err);
-  }
-}
 
     onSnapshot(doc(db, "games", gameId), (docSnap) => {
       if (docSnap.exists()) {
@@ -339,61 +230,81 @@
       await setDoc(doc(db, "games", gameId), { status: newStatus });
     });
 
-    let connected = "";
-window.addEventListener("DOMContentLoaded", async () => {
-  if (window.ethereum && window.ethereum.selectedAddress) {
-    connected = window.ethereum.selectedAddress;
-  } else {
-    [connected] = await window.ethereum.request({ method: 'eth_requestAccounts' });
-  }
+    async function fetchY2KBalance(wallet) {
+      try {
+        const res = await fetch(`https://y2k-api.example.com/balance/${wallet}`);
+        const data = await res.json();
+        document.getElementById("balance").textContent = `${data.balanceFormatted} Y2K`;
+      } catch (err) {
+        console.warn("Balance fetch failed", err);
+      }
+    }
 
-  document.getElementById("wallet").textContent = connected.slice(0, 6) + "..." + connected.slice(-4);
-  fetchY2KBalance(connected);
+        let connected = "";
 
-  if (connected.toLowerCase() === ADMIN_WALLET) {
-    selector.style.display = "block";
-  }
+    window.addEventListener("DOMContentLoaded", async () => {
+      try {
+        if (window.ethereum && window.ethereum.selectedAddress) {
+          connected = window.ethereum.selectedAddress;
+        } else {
+          [connected] = await window.ethereum.request({ method: 'eth_requestAccounts' });
+        }
 
-  const buyBtn = document.querySelector(".buy-btn");
-  if (buyBtn) {
-    buyBtn.addEventListener("click", () => {
-      buyBtn.classList.add("glitch-flicker");
-      setTimeout(() => buyBtn.classList.remove("glitch-flicker"), 300);
-      document.querySelector(".game-details").classList.add("pot-animated");
-      setTimeout(() => document.querySelector(".game-details").classList.remove("pot-animated"), 1000);
+        if (!connected) return;
+
+        document.getElementById("wallet").textContent = connected.slice(0, 6) + "..." + connected.slice(-4);
+        fetchY2KBalance(connected);
+
+        if (connected.toLowerCase() === ADMIN_WALLET) {
+          selector.style.display = "block";
+        }
+
+        // Load nickname
+        const nicknameInput = document.getElementById("nicknameInput");
+
+        onSnapshot(doc(db, "users", connected.toLowerCase()), (docSnap) => {
+          if (docSnap.exists()) {
+            nicknameInput.value = docSnap.data().nickname || "";
+          }
+        });
+
+        nicknameInput.addEventListener("blur", async () => {
+          const nickname = nicknameInput.value.trim();
+          if (!nickname) return;
+          await setDoc(doc(db, "users", connected.toLowerCase()), { nickname }, { merge: true });
+        });
+
+        const buyBtn = document.querySelector(".buy-btn");
+        if (buyBtn) {
+          buyBtn.addEventListener("click", () => {
+            buyBtn.classList.add("glitch-flicker");
+            setTimeout(() => buyBtn.classList.remove("glitch-flicker"), 300);
+            document.querySelector(".game-details").classList.add("pot-animated");
+            setTimeout(() => document.querySelector(".game-details").classList.remove("pot-animated"), 1000);
+          });
+        }
+      } catch (err) {
+        console.error("Wallet init failed", err);
+      }
     });
-  }
-});
 
+    // Manual connect button
+    document.getElementById("connectWalletBtn").addEventListener("click", async () => {
+      try {
+        [connected] = await window.ethereum.request({ method: 'eth_requestAccounts' });
+        document.getElementById("wallet").textContent = connected.slice(0, 6) + "..." + connected.slice(-4);
+        fetchY2KBalance(connected);
+        document.getElementById("connectWalletBtn").style.display = "none";
+      } catch (e) {
+        console.error("Wallet connect failed", e);
+      }
+    });
+
+    // Scroll button behavior
     const topBtn = document.getElementById("topBtn");
     window.addEventListener("scroll", () => {
       topBtn.style.display = window.scrollY > 200 ? "block" : "none";
     });
-
-    const nicknameInput = document.getElementById("nicknameInput");
-
-nicknameInput.addEventListener("blur", async () => {
-  const nickname = nicknameInput.value.trim();
-  if (!nickname) return;
-  await setDoc(doc(db, "users", connected.toLowerCase()), { nickname }, { merge: true });
-});
-
-onSnapshot(doc(db, "users", connected.toLowerCase()), (docSnap) => {
-  if (docSnap.exists()) {
-    nicknameInput.value = docSnap.data().nickname || "";
-  }
-});
-
-    document.getElementById("connectWalletBtn").addEventListener("click", async () => {
-  try {
-    [connected] = await window.ethereum.request({ method: 'eth_requestAccounts' });
-    document.getElementById("wallet").textContent = connected.slice(0, 6) + "..." + connected.slice(-4);
-    fetchY2KBalance(connected);
-  } catch (e) {
-    console.error("Wallet connect failed", e);
-  }
-});
-    
   </script>
 </body>
 </html>
